# xpackage

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  clang-format
examples/suirless_dynation/Suirless_Dynation_1.0/: package.json
include/: proximaflake.h  xpackage.h  xpackage_manager.h
src/: xpackage.cpp
src/test/: main.cpp
src/win32/: xpackage_manager_win32.cpp
